# cpp-sandbox

./: .bashrc  CMakeLists.txt  README.md  flake.nix  result
src/: cpp_curricula.cpp  main.cpp
